Refactorización de clases herencia y composición + Diagrama de clases